--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 124,
    "metadata": {
     "scrolled": true
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,9 @@
     "# your code here\n",
     "# sum of values\n",
     "pokemon['total_test'] = pokemon['HP'] + pokemon['Attack'] + pokemon['Defense'] + pokemon['Sp. Atk'] + pokemon['Sp. Def'] + pokemon['Speed']\n",
-    "pokemon['total_test2'] = pokemon[['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']].apply(sum, axis=1)\n",
+    "# agg() faster than apply():\n",
+    "# pokemon['total_test2'] = pokemon[['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']].agg(sum, axis=1)\n",
+    "pokemon['total_test2'] = pokemon[['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']].agg(sum, axis=1)\n",
     "same = pokemon['total_test'] == pokemon['Total']\n",
     "same2 = pokemon['total_test2'] == pokemon['Total']\n",
     "same.value_counts()\n",
