--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "(397924, 13)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,131 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>amount_spent</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>Country</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>12346</th>\n",
-       "      <th>United Kingdom</th>\n",
-       "      <td>77183.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12347</th>\n",
-       "      <th>Iceland</th>\n",
-       "      <td>4310.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12348</th>\n",
-       "      <th>Finland</th>\n",
-       "      <td>1797.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12349</th>\n",
-       "      <th>Italy</th>\n",
-       "      <td>1757.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12350</th>\n",
-       "      <th>Norway</th>\n",
-       "      <td>334.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18280</th>\n",
-       "      <th>United Kingdom</th>\n",
-       "      <td>180.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18281</th>\n",
-       "      <th>United Kingdom</th>\n",
-       "      <td>80.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18282</th>\n",
-       "      <th>United Kingdom</th>\n",
-       "      <td>178.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18283</th>\n",
-       "      <th>United Kingdom</th>\n",
-       "      <td>2094.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18287</th>\n",
-       "      <th>United Kingdom</th>\n",
-       "      <td>1837.28</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4347 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           amount_spent\n",
-       "CustomerID Country                     \n",
-       "12346      United Kingdom      77183.60\n",
-       "12347      Iceland              4310.00\n",
-       "12348      Finland              1797.24\n",
-       "12349      Italy                1757.55\n",
-       "12350      Norway                334.40\n",
-       "...                                 ...\n",
-       "18280      United Kingdom        180.60\n",
-       "18281      United Kingdom         80.82\n",
-       "18282      United Kingdom        178.05\n",
-       "18283      United Kingdom       2094.88\n",
-       "18287      United Kingdom       1837.28\n",
-       "\n",
-       "[4347 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sums = orders.groupby(['CustomerID','Country']).agg({'amount_spent':sum})\n",
-    "sums"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +207,7 @@
        "[218 rows x 1 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +335,7 @@
        "[869 rows x 1 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +473,7 @@
        "[4347 rows x 2 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -692,13 +568,13 @@
        "Spain             2"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n",
+    "# group by country and aggregate count VIP occurences\n",
     "def points_q2(row):\n",
     "    if row['status'] == 'VIP':\n",
     "        return 1\n",
@@ -719,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -785,13 +661,13 @@
        "Switzerland                 9"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n",
+    "# like Q2 but count occurences of vip OR preferred\n",
     "def points_q3(row):\n",
     "    if row['status'] in ['VIP', 'Preferred']:\n",
     "        return 1\n",
