--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "9       50       64     43           1      False  "
       ]
      },
-     "execution_count": 142,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "       'Electric', 'Fire', 'Ghost', 'Bug', 'Normal'], dtype=object)"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "9       64     43           1      False  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "4       50     65           1      False   1.209302  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
        "429      180       20    150           3       True        9.0  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
        "230      5           2      False   0.043478  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1251,14 +1251,14 @@
        "[800 rows x 15 columns]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here\n",
-    "pokemon['Combo Type'] = pokemon[['Type 1', 'Type 2']].apply(lambda x: '-'.join(x.dropna()), axis=1)\n",
+    "pokemon['Combo Type'] = pokemon[['Type 1', 'Type 2']].agg(lambda x: '-'.join(x.dropna()), axis=1)\n",
     "pokemon"
    ]
   },
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1423,7 @@
        "348       95       40     95           3      False      3.000  Water-Dark  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,6 +1431,7 @@
    "source": [
     "# your code here\n",
     "pokemon_ad_sorted = pokemon.sort_values(by=['A/D Ratio'], ascending=False)\n",
+    "# top5 = pokemon.nlargest(5, ['A/D Ratio'])\n",
     "top5 = pokemon_ad_sorted.head(5)\n",
     "top5"
    ]
@@ -1446,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1455,7 +1456,7 @@
        "array(['Psychic', 'Water-Dark', 'Bug-Poison', 'Rock'], dtype=object)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1479,14 +1480,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_81916/1873129049.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/tmp/ipykernel_213340/1873129049.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  pokemon[pokemon['Combo Type'].isin(top_combos)].groupby(['Combo Type']).agg(np.mean)\n"
      ]
     },
@@ -1615,7 +1616,7 @@
        "Water-Dark  88.833333  63.500000  87.166667    3.166667   0.000000   2.291949  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
